<resources>
    <string name="app_name">Sneakers</string>
    <string name="ukuran_35_45">Ukuran : 35 - 45</string>
    <string name="deskripsi_cocok_di_kalangan_anak_muda_bercorak_warna_warni_cocok_untuk_wanita_tampil_stylish_model_baru_brand_anak_negri">Deskripsi : Cocok di kalangan anak muda bercorak warna warni cocok untuk wanita,tampil stylish model baru brand anak negri</string>
    <string name="idr_800k">IDR.800k</string>
    <string name="compass_x_jason_ranti">Compass x Jason Ranti</string>
    <string name="todo">TODO</string>
    <string name="cocok_di_kalangan_anak_muda_bercorak_warna_warni_cocok_untuk_wanita_tampil_stylish_model_baru_brand_anak_negri">Cocok di kalangan anak muda bercorak warna warni cocok untuk wanita,tampil stylish model baru brand anak negri</string>
    <string name="keranjang">Keranjang</string>
    <string name="buy">Buy</string>
</resources>