<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"

    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/img_sepatu"
        android:layout_width="match_parent"
        android:layout_height="148dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/jason_compass" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_sepatu">

        <TextView
            android:id="@+id/txt_namasepatu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center_horizontal"
            android:text="@string/compass_x_jason_ranti"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_harga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center_horizontal"
            android:text="@string/idr_800k"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_deskripsi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:maxLines="1"
            android:text="@string/cocok_di_kalangan_anak_muda_bercorak_warna_warni_cocok_untuk_wanita_tampil_stylish_model_baru_brand_anak_negri"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp" />


    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>