<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".model.DetailActivity"
    android:id="@+id/detaillayout">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_detail"
            android:layout_width="match_parent"
            android:layout_height="307dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/jason_compass"
            android:contentDescription="@string/todo"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/txt_namadetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/compass_x_jason_ranti"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_detail" />

        <TextView
            android:id="@+id/txt_hargadetail"
            android:layout_width="162dp"
            android:layout_height="32dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="36dp"
            android:text="IDR.800.000,00"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_deskripsidetail" />

        <TextView
            android:id="@+id/txt_deskripsidetail"
            android:layout_width="384dp"
            android:layout_height="145dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_medium"
            android:maxLines="5"
            android:text="@string/cocok_di_kalangan_anak_muda_bercorak_warna_warni_cocok_untuk_wanita_tampil_stylish_model_baru_brand_anak_negri"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_namadetail" />

        <Button
            android:id="@+id/btn_detailshare"
            android:layout_width="170dp"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/black"
            android:text="@string/keranjang"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_hargadetail" />

        <Button
            android:id="@+id/btn_detailbuy"
            android:layout_width="155dp"
            android:layout_height="55dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/black"
            android:text="@string/buy"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/btn_detailshare"
            app:layout_constraintEnd_toStartOf="@+id/btn_detailshare"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_hargadetail" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>